# Auto_crate_the.desktop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
